Add HTML home page

--- a/Index.html
+++ b/Index.html
@@ -5,15 +5,63 @@
     <title>MOOGI RESTURATN</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header>
-        <h1>header</h1>
-    </header>
+    <header><!--        HEADER           -->
+        <h1>logo</h1>
+        <nav>
+          <ul>
+            <li>Home</li>
+            <li>Agencies</li>
+            <li>Menu</li>
+            <li>Gallery</li>
+            <li>Contact us</li>
+            <li>About us</li>
+          </ul>
+        </nav>
+        <div>
+          <h4>Facebook</h4>
+          <h4>Instagram</h4>
+        </div>
+        <div>
+          <p>Wellcom to</p>
+          <h2>Moogi resturant</h2>
+        </div>
+    </header><!--        END OF HEADER           -->
+
     <mein>
-        <section>content</section>
-    </mein>
+      <section><!--               section-one               -->
+        <div>
+          <div>
+            <h3>title</h3>
+            <p>some text to this title</p>
+            <button>Read more</button>
+          </div>
+          <div>
+            <img src="lucarno-img.jpg" />
+          </div>
+        </div>
+        
+        <div>
+          <div>
+            <h3>title</h3>
+            <p>some text to this title</p>
+            <button>Read more</button>
+          </div>
+          <div>
+            <img src="lucarno-img.jpg" />
+          </div>
+        </div>
+      </section><!--               end of section-one               -->
+
+      <section><!--               section-tow               -->
+      </section><!--               end of section-tow               -->
+
+      <section><!--               section-three               -->
+      </section><!--               end of section-three               -->
+
+    </mein><!--        END OF MAIN           -->
     <footer>
         <div>footer</div>
     </footer>
