--- a/Index.html
+++ b/Index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header><!--        HEADER           -->
-        <h1>logo</h1>
-        <nav>
+    <header class="header"><!--        HEADER           -->
+      <div class="center header__wrapper">
+        <h1 class="header__logo">logo</h1>
+        <nav class="header__menu">
           <ul>
             <li>Home</li>
             <li>Agencies</li>
@@ -20,57 +21,48 @@
             <li>About us</li>
           </ul>
         </nav>
-        <div>
+        <div class="header__social">
           <h4>Facebook</h4>
           <h4>Instagram</h4>
         </div>
-        <div>
+        <div class="header__title">
           <p>Wellcom to</p>
           <h2>Moogi resturant</h2>
         </div>
+      </div>
     </header><!--        END OF HEADER           -->
 
-    <mein>
-<<<<<<< HEAD
-      <section><!--               section-one               -->
-        <div>
-          <div>
+    <main>
+      <div class="center">
+        <section class="agencies"><!--               section-one               -->
+          <div class="agencies__info">
             <h3>title</h3>
             <p>some text to this title</p>
             <button>Read more</button>
           </div>
-          <div>
+          <div class="agencies__img">
             <img src="lucarno-img.jpg" />
           </div>
-        </div>
-        
-        <div>
-          <div>
+
+          <div class="agencies__info">
             <h3>title</h3>
             <p>some text to this title</p>
             <button>Read more</button>
           </div>
-          <div>
+          <div class="agencies__img">
             <img src="lucarno-img.jpg" />
           </div>
-        </div>
-      </section><!--               end of section-one               -->
+        </section><!--               end of section-one               -->
 
-      <section><!--               section-tow               -->
-      </section><!--               end of section-tow               -->
+        <section><!--               section-tow               -->
+        </section><!--               end of section-tow               -->
 
-      <section><!--               section-three               -->
-      </section><!--               end of section-three               -->
-
-    </mein><!--        END OF MAIN           -->
-=======
-        <section>content</section>
-        <p> this is a test for github</p>
-    </mein>
->>>>>>> a8f88fee6ce706871cb000f157069feb9ef86ef5
+        <section><!--               section-three               -->
+        </section><!--               end of section-three               -->
+      </div>
+    </main><!--        END OF MAIN           -->
     <footer>
-        <div>footer</div>
+        <div class="center">footer</div>
     </footer>
-
 </body>
 </html>
