Add google font

--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,7 @@
     <meta name="author" content="John Doe">
     <title>MOOGI RESTURATN</title>
 
+    <link href="https://fonts.googleapis.com/css?family=Arsenal|Pattaya&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
@@ -80,9 +81,9 @@
             <img src="img/menus_1.jpg" />
           </div>
           <div calss="menus__part">
-            <img src="img/menus_1.jpg" />
             <h3>Doner Kebab</h3>
             <p>kasi ke donar maro emtehan nakarde bashe nesfe omresh bar fanas, hala az ma goftan bod</p>
+            <img src="img/menus_1.jpg" />
           </div>
           <div calss="menus__part">
             <h3>Doner Kebab</h3>
