--- a/menu.html
+++ b/menu.html
@@ -22,9 +22,9 @@
 
         <nav id="myLinks" class="header__menu">
           <ul>
-              <li><a href="#"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
+              <li><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
               <li><a href="#"><i class="fa fa-clipboard" aria-hidden="true"></i>Agencies</a></li>
-              <li><a href="menu.html"><i class="fa fa-folder-open" aria-hidden="true"></i>Menu</a></li>
+              <li><a href="#"><i class="fa fa-folder-open" aria-hidden="true"></i>Menu</a></li>
               <li><a href="#"><i class="fa fa-picture-o" aria-hidden="true"></i>Gallery</a></li>
               <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i>Contact us</a></li>
               <li><a href="#"><i class="fa fa-binoculars" aria-hidden="true"></i>About us</a></li>
@@ -48,60 +48,44 @@
 
     <main>
       <div class="center">
-        <section class="agencies"><!--               section-one               -->
-          <a href="#" class="agencies__info">
-            <div class="agencies-background">
-              <h3>Our agency at Lucarno</h3>
-              <p>For more information you can contact us at phone number
-                below or see our menus to continue reading</p>
-              <button>Read more</button>
-            </div>
-          </a>
-          <a href="#" class="agencies__img">
-            <img src="img/image_1.jpg" />
-          </a>
-
-          <a href="#" class="agencies__img">
-            <img src="img/image_2.jpg" />
-          </a>
-          <a href="#" class="agencies__info agencies__info2">
-            <div class="agencies-background">
-              <h3>Our agency at Bellinzona</h3>
-              <p>For more information you can contact us at phone number
-                below or see our menus to continue reading</p>
-              <button>Read more</button>
-            </div>
-          </a>
+        <section class="page-menu"><!--               section-one               -->
+          <div class="page-menu__div">
+            <img src="img/menus_1.jpg" />
+            <h3>Doner Kebab</h3>
+            <p>20 Fr</p>
+          </div>
+          <div class="page-menu__div">
+            <img src="img/menus_1.jpg" />
+            <h3>Doner Kebab</h3>
+            <p>20 Fr</p>
+          </div>
+          <div class="page-menu__div">
+            <img src="img/menus_1.jpg" />
+            <h3>Doner Kebab</h3>
+            <p>20 Fr</p>
+          </div>
+          <div class="page-menu__div">
+            <img src="img/menus_1.jpg" />
+            <h3>Doner Kebab</h3>
+            <p>20 Fr</p>
+          </div>
+          <div class="page-menu__div">
+            <img src="img/menus_1.jpg" />
+            <h3>Doner Kebab</h3>
+            <p>20 Fr</p>
+          </div>
+          <div class="page-menu__div">
+            <img src="img/menus_1.jpg" />
+            <h3>Doner Kebab</h3>
+            <p>20 Fr</p>
+          </div>
+          <div class="page-menu__div">
+            <img src="img/menus_1.jpg" />
+            <h3>Doner Kebab</h3>
+            <p>20 Fr</p>
+          </div>
         </section><!--               end of section-one               -->
-
-        <section class="menus"><!--                  section-tow               -->
-          <div calss="menus__part">
-            <h3>Doner Kebab</h3>
-            <p>kasi ke donar maro emtehan nakarde bashe nesfe omresh bar fanas, hala az ma goftan bod</p>
-            <img src="img/menus_1.jpg" />
-          </div>
-          <div calss="menus__part">
-            <img src="img/menus_1.jpg" />
-            <h3>Doner Kebab</h3>
-            <p>kasi ke donar maro emtehan nakarde bashe nesfe omresh bar fanas, hala az ma goftan bod</p>
-          </div>
-          <div calss="menus__part">
-            <h3>Doner Kebab</h3>
-            <p>kasi ke donar maro emtehan nakarde bashe nesfe omresh bar fanas, hala az ma goftan bod</p>
-            <img src="img/menus_1.jpg" />
-          </div>
-        </section><!--               end of section-tow               -->
       </div>
-      <section class="contact"><!--               section-three               -->
-        <div class="contact__map">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2761.837188353819!2d9.01394011558205!3d46.193798479116346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47844a49838882c9%3A0x56b771a867ae6460!2sMoogi%20Kebab%20Pizza!5e0!3m2!1sde!2sch!4v1575486055624!5m2!1sde!2sch" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-        </div>
-        <div class="contact__info">
-          <h3>asdf</h3>
-
-        </div>
-      </section><!--               end of section-three               -->
-
     </main><!--        END OF MAIN           -->
     <footer>
         <div class="center footer__wrapper">
