--- a/menu.html
+++ b/menu.html
@@ -26,7 +26,7 @@
               <li><a href="#"><i class="fa fa-clipboard" aria-hidden="true"></i>Agencies</a></li>
               <li><a href="#"><i class="fa fa-folder-open" aria-hidden="true"></i>Menu</a></li>
               <li><a href="#"><i class="fa fa-picture-o" aria-hidden="true"></i>Gallery</a></li>
-              <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i>Contact us</a></li>
+              <li><a href="contact-us.html"><i class="fa fa-phone" aria-hidden="true"></i>Contact us</a></li>
               <li><a href="#"><i class="fa fa-binoculars" aria-hidden="true"></i>About us</a></li>
           </ul>
         </nav>
