Fix menu navbar and add new font
Fix menu navbar for mobile
fix header background
add new font for all of page in header

--- a/contact-us.html
+++ b/contact-us.html
@@ -9,7 +9,7 @@
     <meta name="author" content="John Doe">
     <title>MOOGI RESTURATN</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Arsenal|Pattaya&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Arsenal|Fredericka+the+Great|Pattaya&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
@@ -25,7 +25,7 @@
               <li><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
               <li><a href="#"><i class="fa fa-clipboard" aria-hidden="true"></i>Agencies</a></li>
               <li><a href="menu.html"><i class="fa fa-folder-open" aria-hidden="true"></i>Menu</a></li>
-              <li><a href="#"><i class="fa fa-picture-o" aria-hidden="true"></i>Gallery</a></li>
+              <!--<li><a href="#"><i class="fa fa-picture-o" aria-hidden="true"></i>Gallery</a></li>-->
               <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i>Contact us</a></li>
               <li><a href="#"><i class="fa fa-binoculars" aria-hidden="true"></i>About us</a></li>
           </ul>
@@ -39,6 +39,7 @@
           <a href="#"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
         </div>
       </div>
+      <h1 class="header--title">CONTACT US</h1>
     </header><!--        END OF HEADER           -->
 
     <main>
@@ -50,7 +51,7 @@
           </div>
           <div class="contact_us__row">
             <div class="contact_us__column">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2761.837188353819!2d9.01394011558205!3d46.193798479116346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47844a49838882c9%3A0x56b771a867ae6460!2sMoogi%20Kebab%20Pizza!5e0!3m2!1sde!2sch!4v1575486055624!5m2!1sde!2sch" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2761.837188353819!2d9.01394011558205!3d46.193798479116346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47844a49838882c9%3A0x56b771a867ae6460!2sMoogi%20Kebab%20Pizza!5e0!3m2!1sde!2sch!4v1575486055624!5m2!1sde!2sch" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
             </div>
             <div class="contact_us__column">
               <form action="/action_page.php">
