--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header class="header"><!--        HEADER           -->
-      <div class="center header__wrapper">
+      <div class="header__wrapper">
         <a class="header__logo" href="#"><img src="img/logo.png"/></a>
 
         <nav id="myLinks" class="header__menu">
@@ -25,8 +25,8 @@
               <li><a href="#"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
               <li><a href="#"><i class="fa fa-clipboard" aria-hidden="true"></i>Agencies</a></li>
               <li><a href="menu.html"><i class="fa fa-folder-open" aria-hidden="true"></i>Menu</a></li>
-              <li><a href="#"><i class="fa fa-picture-o" aria-hidden="true"></i>Gallery</a></li>
-              <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i>Contact us</a></li>
+              <!--<li><a href="#"><i class="fa fa-picture-o" aria-hidden="true"></i>Gallery</a></li>-->
+              <li><a href="contact-us.html"><i class="fa fa-phone" aria-hidden="true"></i>Contact us</a></li>
               <li><a href="#"><i class="fa fa-binoculars" aria-hidden="true"></i>About us</a></li>
           </ul>
         </nav>
@@ -94,12 +94,13 @@
       </div>
       <section class="contact"><!--               section-three               -->
         <div class="contact__map">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2761.837188353819!2d9.01394011558205!3d46.193798479116346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47844a49838882c9%3A0x56b771a867ae6460!2sMoogi%20Kebab%20Pizza!5e0!3m2!1sde!2sch!4v1575486055624!5m2!1sde!2sch" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2761.837188353819!2d9.01394011558205!3d46.193798479116346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47844a49838882c9%3A0x56b771a867ae6460!2sMoogi%20Kebab%20Pizza!5e0!3m2!1sde!2sch!4v1575486055624!5m2!1sde!2sch" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
         </div>
         <div class="contact__info">
-          <div>
-          <h3>asdf</h3>
-          </div>
+          <h2>About us</h2>
+          <p>11 High Street </br> Bellenzona </br> +41 79 897 42 58 </br> info@moogikebab.ch</p>
+          <p>age eshghet keshid ke maro to <a href="#">facebook</a> ham donbal kon</p>
+          <p>age eshghet keshid ke maro to <a href="#">instagram</a> ham donbal kon</p>
         </div>
       </section><!--               end of section-three               -->
 
