--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,7 @@
     <meta name="author" content="John Doe">
     <title>MOOGI RESTURATN</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Arsenal|Pattaya&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Arsenal|Fredericka+the+Great|Pattaya&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
@@ -25,7 +25,7 @@
               <li><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
               <li><a href="#"><i class="fa fa-clipboard" aria-hidden="true"></i>Agencies</a></li>
               <li><a href="#"><i class="fa fa-folder-open" aria-hidden="true"></i>Menu</a></li>
-              <li><a href="#"><i class="fa fa-picture-o" aria-hidden="true"></i>Gallery</a></li>
+              <!--<li><a href="#"><i class="fa fa-picture-o" aria-hidden="true"></i>Gallery</a></li>-->
               <li><a href="contact-us.html"><i class="fa fa-phone" aria-hidden="true"></i>Contact us</a></li>
               <li><a href="#"><i class="fa fa-binoculars" aria-hidden="true"></i>About us</a></li>
           </ul>
@@ -39,6 +39,7 @@
           <a href="#"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
         </div>
       </div>
+      <h1 class="header--title">MENU</h1>
     </header><!--        END OF HEADER           -->
 
     <main>
