Add new page (agencies)
change some style

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 
         <nav id="myLinks" class="header__menu">
           <ul>
-              <li><a href="#"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
-              <li><a href="#"><i class="fa fa-clipboard" aria-hidden="true"></i>Agencies</a></li>
-              <li><a href="menu.html"><i class="fa fa-folder-open" aria-hidden="true"></i>Menu</a></li>
-              <!--<li><a href="#"><i class="fa fa-picture-o" aria-hidden="true"></i>Gallery</a></li>-->
-              <li><a href="contact-us.html"><i class="fa fa-phone" aria-hidden="true"></i>Contact us</a></li>
-              <li><a href="#"><i class="fa fa-binoculars" aria-hidden="true"></i>About us</a></li>
+            <li><a href="index.html" class="hover"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
+            <li><a href="#"><i class="fa fa-clipboard" aria-hidden="true"></i>Agencies</a></li>
+            <li><a href="menu.html"><i class="fa fa-folder-open" aria-hidden="true"></i>Menu</a></li>
+            <!--<li><a href="#"><i class="fa fa-picture-o" aria-hidden="true"></i>Gallery</a></li>-->
+            <li><a href="about-us.html"><i class="fa fa-binoculars" aria-hidden="true"></i>About us</a></li>
+            <li><a href="contact-us.html"><i class="fa fa-phone" aria-hidden="true"></i>Contact us</a></li>
           </ul>
         </nav>
         <a href="javascript:void(0);" class="header__icon" onclick="myFunction()">
@@ -49,7 +49,7 @@
     <main>
       <div class="center">
         <section class="agencies"><!--               section-one               -->
-          <a href="#" class="agencies__info">
+          <a href="agencies_lucarno.html" class="agencies__info">
             <div class="agencies-background">
               <h3>Our agency at Lucarno</h3>
               <p>For more information you can contact us at phone number
@@ -57,14 +57,14 @@
               <button>Read more</button>
             </div>
           </a>
-          <a href="#" class="agencies__img">
+          <a href="agencies_lucarno.html" class="agencies__img">
             <img src="img/image_1.jpg" />
           </a>
 
-          <a href="#" class="agencies__img">
+          <a href="agencies_bellinzona.html" class="agencies__img">
             <img src="img/image_2.jpg" />
           </a>
-          <a href="#" class="agencies__info agencies__info2">
+          <a href="agencies_bellinzona.html" class="agencies__info agencies__info2">
             <div class="agencies-background">
               <h3>Our agency at Bellinzona</h3>
               <p>For more information you can contact us at phone number
