Fix responsive for MOBILE TABLET PC

--- a/menu.html
+++ b/menu.html
@@ -20,14 +20,14 @@
       <div class="header__wrapper">
         <a class="header__logo" href="#"><img src="img/logo.png"/></a>
 
-        <nav id="myLinks" class="header__menu">
+        <nav id="header__menu" class="header__menu">
           <ul>
-            <li><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
-            <li><a href="#"><i class="fa fa-clipboard" aria-hidden="true"></i>Agencies</a></li>
-            <li><a href="menu.html" class="hover"><i class="fa fa-folder-open" aria-hidden="true"></i>Menu</a></li>
-            <!--<li><a href="#"><i class="fa fa-picture-o" aria-hidden="true"></i>Gallery</a></li>-->
-            <li><a href="about-us.html"><i class="fa fa-binoculars" aria-hidden="true"></i>About us</a></li>
-            <li><a href="contact-us.html"><i class="fa fa-phone" aria-hidden="true"></i>Contact us</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#">Agencies</a></li>
+            <li><a href="menu.html" class="hover">Menu</a></li>
+            <!--<li><a href="#">Gallery</a></li>-->
+            <li><a href="about-us.html">About us</a></li>
+            <li><a href="contact-us.html">Contact us</a></li>
           </ul>
         </nav>
         <a href="javascript:void(0);" class="header__icon" onclick="myFunction()">
