change some CSS and Add Single page

--- a/agencies_bellinzona.html
+++ b/agencies_bellinzona.html
@@ -39,7 +39,7 @@
           <a href="#"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
         </div>
       </div>
-      <h1 class="header--title">BELLINZONA</h1>
+      <h1 class="header--title">bellinzona</h1>
     </header><!--        END OF HEADER           -->
 
     <main>
