--- a/contact-us.html
+++ b/contact-us.html
@@ -39,21 +39,21 @@
           <a href="#"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
         </div>
       </div>
-      <h1 class="header--title">CONTACT US</h1>
+      <h1 class="header--title">contact us</h1>
     </header><!--        END OF HEADER           -->
 
     <main>
       <div class="center">
-        <section class="contact_us">
-          <div class="contact_us__title">
+        <section class="page-contact_us">
+          <div class="page-contact_us__title">
             <h2>Contact Us</h2>
             <p>Swing by for a cup of coffee, or leave us a message:</p>
           </div>
-          <div class="contact_us__row">
-            <div class="contact_us__column">
+          <div class="page-contact_us__row">
+            <div class="page-contact_us__column">
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2761.837188353819!2d9.01394011558205!3d46.193798479116346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47844a49838882c9%3A0x56b771a867ae6460!2sMoogi%20Kebab%20Pizza!5e0!3m2!1sde!2sch!4v1575486055624!5m2!1sde!2sch" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
             </div>
-            <div class="contact_us__column">
+            <div class="page-contact_us__column">
               <form action="/action_page.php">
                 <label for="fname">First Name</label>
                 <input type="text" id="fname" name="firstname" placeholder="Your name..">
