--- a/menu.html
+++ b/menu.html
@@ -39,7 +39,7 @@
           <a href="#"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
         </div>
       </div>
-      <h1 class="header--title">MENU</h1>
+      <h1 class="header--title">menu</h1>
     </header><!--        END OF HEADER           -->
 
     <main>
