--- a/index.html
+++ b/index.html
@@ -86,56 +86,56 @@
         	<div class="container-fluid">
         		<div id="carousel-example" class="carousel slide" data-ride="carousel">
         			<div class="carousel-inner row w-100 mx-auto menus" role="listbox">
-            			<div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3 active menus__part">
+            			<div class="carousel-item col-12 col-sm-4 col-md-4 col-lg-3 active menus__part">
                     <div style="margin: 0px 20px">
                     <h3>Doner Kebab</h3>
                     <p>kasi ke donar maro emtehan nakarde bashe nesfe omresh bar fanas, hala az ma goftan bod</p>
                     <img src="img/menus_1.jpg" />
                   </div>
                   </div>
-                  <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3 menus__part">
+                  <div class="carousel-item col-12 col-sm-4 col-md-4 col-lg-3 menus__part">
                     <div style="margin: 0px 20px">
                       <h3>Doner Kebab</h3>
                       <p>kasi ke donar maro emtehan nakarde bashe nesfe omresh bar fanas, hala az ma goftan bod</p>
                       <img src="img/menus_1.jpg" />
                     </div>
                       </div>
-                  <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3 menus__part">
+                  <div class="carousel-item col-12 col-sm-4 col-md-4 col-lg-3 menus__part">
                     <div style="margin: 0px 20px">
                       <h3>Doner Kebab</h3>
                       <p>kasi ke donar maro emtehan nakarde bashe nesfe omresh bar fanas, hala az ma goftan bod</p>
                       <img src="img/menus_1.jpg" />
                     </div>
                       </div>
-                    <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3 menus__part">
+                    <div class="carousel-item col-12 col-sm-4 col-md-4 col-lg-3 menus__part">
                       <div style="margin: 0px 20px">
                         <h3>Doner Kebab</h3>
                         <p>kasi ke donar maro emtehan nakarde bashe nesfe omresh bar fanas, hala az ma goftan bod</p>
                         <img src="img/menus_1.jpg" />
                       </div>
                         </div>
-                    <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3 menus__part">
+                    <div class="carousel-item col-12 col-sm-4 col-md-4 col-lg-3 menus__part">
                       <div style="margin: 0px 20px">
                         <h3>Doner Kebab</h3>
                         <p>kasi ke donar maro emtehan nakarde bashe nesfe omresh bar fanas, hala az ma goftan bod</p>
                         <img src="img/menus_1.jpg" />
                       </div>
                         </div>
-                    <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3 menus__part">
+                    <div class="carousel-item col-12 col-sm-4 col-md-4 col-lg-3 menus__part">
                       <div style="margin: 0px 20px">
                         <h3>Doner Kebab</h3>
                         <p>kasi ke donar maro emtehan nakarde bashe nesfe omresh bar fanas, hala az ma goftan bod</p>
                         <img src="img/menus_1.jpg" />
                       </div>
                         </div>
-                    <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3 menus__part">
+                    <div class="carousel-item col-12 col-sm-4 col-md-4 col-lg-3 menus__part">
                       <div style="margin: 0px 20px">
                         <h3>Doner Kebab</h3>
                         <p>kasi ke donar maro emtehan nakarde bashe nesfe omresh bar fanas, hala az ma goftan bod</p>
                         <img src="img/menus_1.jpg" />
                       </div>
                         </div>
-                    <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3 menus__part">
+                    <div class="carousel-item col-12 col-sm-4 col-md-4 col-lg-3 menus__part">
                       <div style="margin: 0px 20px">
                         <h3>Doner Kebab</h3>
                         <p>kasi ke donar maro emtehan nakarde bashe nesfe omresh bar fanas, hala az ma goftan bod</p>
@@ -162,7 +162,7 @@
         </div>
         <div class="contact__info">
           <h2>About us</h2>
-          <p>11 High Street </br> Bellenzona </br> +41 79 897 42 58 </br> info@moogikebab.ch</p>
+          <p>Moogi pizza kebab </br>Via Murate 5</br>Bellinzona 6500</br>Tel.091 825 05 05</br>Tel.078 934 14 42</br> info@moogikebab.ch</p>
           <p>age eshghet keshid ke maro to <a href="#">facebook</a> ham donbal kon</p>
           <p>age eshghet keshid ke maro to <a href="#">instagram</a> ham donbal kon</p>
         </div>
@@ -171,16 +171,36 @@
     </main><!--        END OF MAIN           -->
     <footer>
         <div class="center footer__wrapper">
-          <div>
-            <h4>Social</h4>
-            <a href="#"><i class="fa fa-facebook-square fa-3x fb" aria-hidden="true"></i></a>
-            <a href="#"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
+          <div class="footer__agencies">
+            <div class="footer__agencies--info">
+              <h4>Moogi take away</h4>
+              <p>Via Canceliere Molo 3</p>
+              <p>Bellinzona 6500</p>
+              <p>Tel.078 934 14 42</p>
+            </div>
+            <div class="footer__agencies--maps">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d690.4598442645296!2d9.024296229257262!3d46.19375492703674!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47844a33e35bc5d9%3A0xb4d31bc680826b02!2sVia%20cancelliere%20Molo%203A%2C%206500%20Bellinzona!5e0!3m2!1sde!2sch!4v1592917601441!5m2!1sde!2sch" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+            </div>
           </div>
-          <div>2</div>
-          <div>
-            <h4>Kontakt</h4>
-            <address>Moogi Kebab Bokhor halesho bebar </br>Keltenstrasse 3 </br>Bern 3018</address>
+          <div class="footer__agencies">
+            <div class="footer__agencies--info">
+              <h4>Moogi take away</h4>
+              <p>Via Camoghè 1</p>
+              <p> Lugano 6900</p>
+              <p>Tel.078 934 14 42</p>
+            </div>
+            <div class="footer__agencies--maps">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2770.9605501321084!2d8.954986915780445!3d46.011979704745016!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478432759c63cc05%3A0x8279a689ee3e9294!2sVia%20Camogh%C3%A8%201%2C%206900%20Lugano!5e0!3m2!1sde!2sch!4v1592917683489!5m2!1sde!2sch" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+            </div>
           </div>
+        </div>
+        <div class="footer__social">
+          <h4>Social</h4>
+          <a href="#"><i class="fa fa-facebook-square fa-4x fb" aria-hidden="true"></i></a>
+          <a href="#"><i class="fa fa-instagram fa-4x" aria-hidden="true"></i></a>
+        </div>
+        <div class="footer__link">
+            <p>COPYRIGHT Ⓒ 2020 All rights are reserved - Design & Developed by<a href="https://www.linkedin.com/in/kazam-zahedi/"> Kazam</a> </p>
         </div>
     </footer>
 
