--- a/index.html
+++ b/index.html
@@ -86,71 +86,71 @@
         	<div class="container-fluid">
         		<div id="carousel-example" class="carousel slide" data-ride="carousel">
         			<div class="carousel-inner row w-100 mx-auto menus" role="listbox">
-            			<div class="carousel-item col-12 col-sm-4 col-md-4 col-lg-3 active menus__part">
-                    <div style="margin: 0px 20px">
-                    <h3>Doner Kebab</h3>
-                    <p>kasi ke donar maro emtehan nakarde bashe nesfe omresh bar fanas, hala az ma goftan bod</p>
-                    <img src="img/menus_1.jpg" />
+                <div class="carousel-item col-12 col-sm-4 col-md-4 col-lg-3 active menus__part">
+                  <div>
+                    <h3>kebab focaccia1</h3>
+                    <p>insalata, pomodori, carote, salsa su richiesta</p>
+                    <img src="img/Kebab-Focaccia.jpg" />
                   </div>
+                </div>
+                <div class="carousel-item col-12 col-sm-4 col-md-4 col-lg-3 menus__part">
+                  <div>
+                    <img src="img/Kebab-Focaccia.jpg" />
+                    <h3>kebab focaccia2</h3>
+                    <p>insalata, pomodori, carote, salsa su richiesta</p>
                   </div>
-                  <div class="carousel-item col-12 col-sm-4 col-md-4 col-lg-3 menus__part">
-                    <div style="margin: 0px 20px">
-                      <h3>Doner Kebab</h3>
-                      <p>kasi ke donar maro emtehan nakarde bashe nesfe omresh bar fanas, hala az ma goftan bod</p>
-                      <img src="img/menus_1.jpg" />
-                    </div>
-                      </div>
-                  <div class="carousel-item col-12 col-sm-4 col-md-4 col-lg-3 menus__part">
-                    <div style="margin: 0px 20px">
-                      <h3>Doner Kebab</h3>
-                      <p>kasi ke donar maro emtehan nakarde bashe nesfe omresh bar fanas, hala az ma goftan bod</p>
-                      <img src="img/menus_1.jpg" />
-                    </div>
-                      </div>
-                    <div class="carousel-item col-12 col-sm-4 col-md-4 col-lg-3 menus__part">
-                      <div style="margin: 0px 20px">
-                        <h3>Doner Kebab</h3>
-                        <p>kasi ke donar maro emtehan nakarde bashe nesfe omresh bar fanas, hala az ma goftan bod</p>
-                        <img src="img/menus_1.jpg" />
-                      </div>
-                        </div>
-                    <div class="carousel-item col-12 col-sm-4 col-md-4 col-lg-3 menus__part">
-                      <div style="margin: 0px 20px">
-                        <h3>Doner Kebab</h3>
-                        <p>kasi ke donar maro emtehan nakarde bashe nesfe omresh bar fanas, hala az ma goftan bod</p>
-                        <img src="img/menus_1.jpg" />
-                      </div>
-                        </div>
-                    <div class="carousel-item col-12 col-sm-4 col-md-4 col-lg-3 menus__part">
-                      <div style="margin: 0px 20px">
-                        <h3>Doner Kebab</h3>
-                        <p>kasi ke donar maro emtehan nakarde bashe nesfe omresh bar fanas, hala az ma goftan bod</p>
-                        <img src="img/menus_1.jpg" />
-                      </div>
-                        </div>
-                    <div class="carousel-item col-12 col-sm-4 col-md-4 col-lg-3 menus__part">
-                      <div style="margin: 0px 20px">
-                        <h3>Doner Kebab</h3>
-                        <p>kasi ke donar maro emtehan nakarde bashe nesfe omresh bar fanas, hala az ma goftan bod</p>
-                        <img src="img/menus_1.jpg" />
-                      </div>
-                        </div>
-                    <div class="carousel-item col-12 col-sm-4 col-md-4 col-lg-3 menus__part">
-                      <div style="margin: 0px 20px">
-                        <h3>Doner Kebab</h3>
-                        <p>kasi ke donar maro emtehan nakarde bashe nesfe omresh bar fanas, hala az ma goftan bod</p>
-                        <img src="img/menus_1.jpg" />
-                      </div>
-                        </div>
-                        </div>
+                </div>
+                <div class="carousel-item col-12 col-sm-4 col-md-4 col-lg-3 menus__part">
+                  <div>
+                    <h3>kebab focaccia3</h3>
+                    <p>insalata, pomodori, carote, salsa su richiesta</p>
+                    <img src="img/Kebab-Focaccia.jpg" />
+                  </div>
+                </div>
+                <div class="carousel-item col-12 col-sm-4 col-md-4 col-lg-3 menus__part">
+                  <div>
+                    <img src="img/Kebab-Focaccia.jpg" />
+                    <h3>kebab focaccia4</h3>
+                    <p>insalata, pomodori, carote, salsa su richiesta</p>
+                  </div>
+                </div>
+                <div class="carousel-item col-12 col-sm-4 col-md-4 col-lg-3 menus__part">
+                  <div>
+                    <h3>kebab focaccia5</h3>
+                    <p>insalata, pomodori, carote, salsa su richiesta</p>
+                    <img src="img/Kebab-Focaccia.jpg" />
+                  </div>
+                </div>
+                <div class="carousel-item col-12 col-sm-4 col-md-4 col-lg-3 menus__part">
+                  <div>
+                    <img src="img/Kebab-Focaccia.jpg" />
+                    <h3>kebab focaccia6</h3>
+                    <p>insalata, pomodori, carote, salsa su richiesta</p>
+                  </div>
+                </div>
+                <div class="carousel-item col-12 col-sm-4 col-md-4 col-lg-3 menus__part">
+                  <div>
+                    <h3>kebab focaccia7</h3>
+                    <p>insalata, pomodori, carote, salsa su richiesta</p>
+                    <img src="img/Kebab-Focaccia.jpg" />
+                  </div>
+                </div>
+                <div class="carousel-item col-12 col-sm-4 col-md-4 col-lg-3 menus__part">
+                  <div>
+                    <img src="img/Kebab-Focaccia.jpg" />
+                    <h3>kebab focaccia8</h3>
+                    <p>insalata, pomodori, carote, salsa su richiesta</p>
+                  </div>
+                </div>
+              </div>
         			<a class="carousel-control-prev" href="#carousel-example" role="button" data-slide="prev">
-						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-						<span class="sr-only">Previous</span>
-					</a>
-					<a class="carousel-control-next" href="#carousel-example" role="button" data-slide="next">
-						<span class="carousel-control-next-icon" aria-hidden="true"></span>
-						<span class="sr-only">Next</span>
-					</a>
+						    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						    <span class="sr-only">Previous</span>
+					    </a>
+					    <a class="carousel-control-next" href="#carousel-example" role="button" data-slide="next">
+						    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+						    <span class="sr-only">Next</span>
+					    </a>
         		</div>
         	</div>
         </div>
