--- a/index.html
+++ b/index.html
@@ -86,56 +86,56 @@
         	<div class="container-fluid">
         		<div id="carousel-example" class="carousel slide" data-ride="carousel">
         			<div class="carousel-inner row w-100 mx-auto menus" role="listbox">
-                <div class="carousel-item col-12 col-sm-4 col-md-4 col-lg-3 active menus__part">
+                <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-4 active menus__part">
                   <div>
                     <h3>kebab focaccia1</h3>
                     <p>insalata, pomodori, carote, salsa su richiesta</p>
                     <img src="img/Kebab-Focaccia.jpg" />
                   </div>
                 </div>
-                <div class="carousel-item col-12 col-sm-4 col-md-4 col-lg-3 menus__part">
+                <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-4 menus__part">
                   <div>
                     <img src="img/Kebab-Focaccia.jpg" />
                     <h3>kebab focaccia2</h3>
                     <p>insalata, pomodori, carote, salsa su richiesta</p>
                   </div>
                 </div>
-                <div class="carousel-item col-12 col-sm-4 col-md-4 col-lg-3 menus__part">
+                <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-4 menus__part">
                   <div>
                     <h3>kebab focaccia3</h3>
                     <p>insalata, pomodori, carote, salsa su richiesta</p>
                     <img src="img/Kebab-Focaccia.jpg" />
                   </div>
                 </div>
-                <div class="carousel-item col-12 col-sm-4 col-md-4 col-lg-3 menus__part">
+                <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-4 menus__part">
                   <div>
                     <img src="img/Kebab-Focaccia.jpg" />
                     <h3>kebab focaccia4</h3>
                     <p>insalata, pomodori, carote, salsa su richiesta</p>
                   </div>
                 </div>
-                <div class="carousel-item col-12 col-sm-4 col-md-4 col-lg-3 menus__part">
+                <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-4 menus__part">
                   <div>
                     <h3>kebab focaccia5</h3>
                     <p>insalata, pomodori, carote, salsa su richiesta</p>
                     <img src="img/Kebab-Focaccia.jpg" />
                   </div>
                 </div>
-                <div class="carousel-item col-12 col-sm-4 col-md-4 col-lg-3 menus__part">
+                <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-4 menus__part">
                   <div>
                     <img src="img/Kebab-Focaccia.jpg" />
                     <h3>kebab focaccia6</h3>
                     <p>insalata, pomodori, carote, salsa su richiesta</p>
                   </div>
                 </div>
-                <div class="carousel-item col-12 col-sm-4 col-md-4 col-lg-3 menus__part">
+                <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-4 menus__part">
                   <div>
                     <h3>kebab focaccia7</h3>
                     <p>insalata, pomodori, carote, salsa su richiesta</p>
                     <img src="img/Kebab-Focaccia.jpg" />
                   </div>
                 </div>
-                <div class="carousel-item col-12 col-sm-4 col-md-4 col-lg-3 menus__part">
+                <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-4 menus__part">
                   <div>
                     <img src="img/Kebab-Focaccia.jpg" />
                     <h3>kebab focaccia8</h3>
@@ -205,7 +205,7 @@
     </footer>
 
     <!-- Javascript -->
-    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="xjs/jquery-3.3.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
     <script src="js/jquery.backstretch.min.js"></script>
     <script src="js/wow.min.js"></script>
