--- a/about-us.html
+++ b/about-us.html
@@ -23,9 +23,9 @@
         <nav id="myLinks" class="header__menu">
           <ul>
               <li><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
-              <li><a href="#" class="hover"><i class="fa fa-clipboard" aria-hidden="true"></i>Agencies</a></li>
+              <li><a href="#"><i class="fa fa-clipboard" aria-hidden="true"></i>Agencies</a></li>
               <li><a href="menu.html"><i class="fa fa-folder-open" aria-hidden="true"></i>Menu</a></li>
-              <li><a href="about-us.html"><i class="fa fa-binoculars" aria-hidden="true"></i>About us</a></li>
+              <li><a href="about-us.html" class="hover"><i class="fa fa-binoculars" aria-hidden="true"></i>About us</a></li>
               <li><a href="contact-us.html"><i class="fa fa-phone" aria-hidden="true"></i>Contact us</a></li>
           </ul>
         </nav>
@@ -43,8 +43,8 @@
 
     <main>
       <div class="center">
-        <section class="page-agency-lucarno"><!--               section-one               -->
-
+        <section class="singel-page"><!--               section-one               -->
+            <h3>About Us page</h3>
         </section>
       </div>
     </main><!--        END OF MAIN           -->
