--- a/contact-us.html
+++ b/contact-us.html
@@ -18,16 +18,15 @@
 <body>
     <header class="header back_image_2"><!--        HEADER           -->
       <div class="header__wrapper">
-        <a class="header__logo" href="#"><img src="img/logo.png"/></a>
+        <a class="header__logo" href="index.html"><img src="img/logo.png"/></a>
 
         <nav id="header__menu" class="header__menu">
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#">Agencies</a></li>
-            <li><a href="menu.html">Menu</a></li>
-            <!--<li><a href="#">Gallery</a></li>-->
-            <li><a href="about-us.html">About us</a></li>
-            <li><a href="contact-us.html" class="hover">Contact us</a></li>
+            <li><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
+            <li><a href="#" class="hover"><i class="fa fa-clipboard" aria-hidden="true"></i>Agencies</a></li>
+            <li><a href="menu.html"><i class="fa fa-folder-open" aria-hidden="true"></i>Menu</a></li>
+            <li><a href="about-us.html"><i class="fa fa-binoculars" aria-hidden="true"></i>About us</a></li>
+            <li><a href="contact-us.html"><i class="fa fa-phone" aria-hidden="true"></i>Contact us</a></li>
           </ul>
         </nav>
         <a href="javascript:void(0);" class="header__icon" onclick="myFunction()">
@@ -75,18 +74,38 @@
       </div>
     </main><!--        END OF MAIN           -->
     <footer>
-        <div class="center footer__wrapper">
-          <div>
-            <h4>Social</h4>
-            <a href="#"><i class="fa fa-facebook-square fa-3x fb" aria-hidden="true"></i></a>
-            <a href="#"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
+      <div class="center footer__wrapper">
+        <div class="footer__agencies">
+          <div class="footer__agencies--info">
+            <h4>Moogi take away</h4>
+            <p>Via Canceliere Molo 3</p>
+            <p>Bellinzona 6500</p>
+            <p>Tel.078 934 14 42</p>
           </div>
-          <div>2</div>
-          <div>
-            <h4>Kontakt</h4>
-            <address>Moogi Kebab Bokhor halesho bebar </br>Keltenstrasse 3 </br>Bern 3018</address>
+          <div class="footer__agencies--maps">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d690.4598442645296!2d9.024296229257262!3d46.19375492703674!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47844a33e35bc5d9%3A0xb4d31bc680826b02!2sVia%20cancelliere%20Molo%203A%2C%206500%20Bellinzona!5e0!3m2!1sde!2sch!4v1592917601441!5m2!1sde!2sch" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
           </div>
         </div>
-    </footer>
+        <div class="footer__agencies">
+          <div class="footer__agencies--info">
+            <h4>Moogi take away</h4>
+            <p>Via Camoghè 1</p>
+            <p> Lugano 6900</p>
+            <p>Tel.078 934 14 42</p>
+          </div>
+          <div class="footer__agencies--maps">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2770.9605501321084!2d8.954986915780445!3d46.011979704745016!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478432759c63cc05%3A0x8279a689ee3e9294!2sVia%20Camogh%C3%A8%201%2C%206900%20Lugano!5e0!3m2!1sde!2sch!4v1592917683489!5m2!1sde!2sch" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+          </div>
+        </div>
+      </div>
+      <div class="footer__social">
+        <h4>Social</h4>
+        <a href="#"><i class="fa fa-facebook-square fa-4x fb" aria-hidden="true"></i></a>
+        <a href="#"><i class="fa fa-instagram fa-4x" aria-hidden="true"></i></a>
+      </div>
+      <div class="footer__link">
+          <p>COPYRIGHT Ⓒ 2020 All rights are reserved - Design & Developed by<a href="https://www.linkedin.com/in/kazam-zahedi/"> Kazam</a> </p>
+      </div>
+  </footer>
 </body>
 </html>
